test/should-fail/vsgc3994sub.visage
/**
 * @subtest vsgc3994.visage
 */

public class vsgc3994sub {
   public var x;
}
